Update to version 1.1 (with css and js updated)
git-svn-id: https://plugins.svn.wordpress.org/wm-jqmath/trunk@1212077 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/jqmath-0.4.3.css
+++ b/css/jqmath-0.4.3.css
@@ -5,6 +5,8 @@
 fmath, .fm-math		{ font-family: STIXGeneral, 'DejaVu Serif', 'DejaVu Sans',
 						/* Cambria, 'Cambria Math', */ Times, 'Lucida Sans Unicode',
 						OpenSymbol, 'Standard Symbols L', serif; line-height: 1.2 }
+fmath mtext, .fm-math mtext
+					{ line-height: normal }
 fmath mo, .fm-mo, .ma-sans-serif, fmath mi[mathvariant*=sans-serif],
 fmath mn[mathvariant*=sans-serif], fmath mtext[mathvariant*=sans-serif],
 fmath ms[mathvariant*=sans-serif]
